# qwen35-27b-with-opus46

./: .env.example  .gitignore  README.md  pyproject.toml
src/qwen_finetune/: __init__.py  cli.py  config-q35-27b-opus.py  config-q35-9b-opus.py  config.py  data.py  model.py  push.py  runtime_patches.py  secrets.py  train.py
src/qwen_finetune/config_presets/: __init__.py  default.py  q35_27b_opus.py  q35_35b_a3b_kaggle.py  q35_9b_opus.py  template.py
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm3d.py  BlockDiagonalLinear_peft_forward.py  Conv1d.py  Conv2d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  TeLinear_peft_forward.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothIterativeSFTTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py  unsloth_compiled_module_qwen3_5.py  unsloth_compiled_module_siglip.py
